# StockTradeBot

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  hatch_build.py  pyproject.toml
.github/workflows/: backend-quality.yml  backend-tests.yml  ci.yml  frontend-e2e.yml  frontend.yml  package.yml  publish-pypi.yml
alembic/: env.py
alembic/versions/: 20260309_000001_initial_schema.py  20260309_000002_phase2_market_data.py  20260309_000003_phase3_features_and_fundamentals.py  20260309_000004_phase4_models_and_backtests.py  20260309_000005_phase5_portfolio_risk_execution.py  20260309_000006_phase6_ibkr_integration.py  20260309_000007_phase9_intraday_research.py  20260312_000008_daily_research_scope.py
docs/: README.md  architecture.md  commands.md  current-state.md  data-modeling.md  decisions.md  engineering.md  operator-guide.md  plan.md  product-ui.md  release-process.md  roadmap.md  trading-system.md  troubleshooting.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: run-operator-ui-e2e.mjs
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
scripts/: research_optimize.py
src/stocktradebot/: __init__.py  __main__.py  cli.py  config.py  intraday.py  observability.py  runtime.py  storage.py  strategy_modes.py
tests/: conftest.py
tests/fixtures/: __init__.py  phase6_broker.py  phase_data.py
tests/integration/: test_api.py  test_api_intraday.py  test_backfill.py  test_dataset_snapshot.py  test_intraday_research.py  test_model_training.py  test_phase6_broker_execution.py  test_simulation.py
(+56 files in other folders)
