[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "stocktradebot"
version = "0.1.0"
description = "Local-first stock trading bot with a FastAPI backend and React frontend."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.15"
authors = [
  { name = "Rain Zhang" },
]
dependencies = [
  "alembic>=1.16,<2",
  "apscheduler>=3.11,<4",
  "fastapi>=0.115,<1",
  "pydantic>=2.11,<3",
  "sqlalchemy>=2.0,<3",
  "typer>=0.16,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.8,<8",
  "httpx>=0.28,<1",
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.1,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
stocktradebot = "stocktradebot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stocktradebot"]

[tool.pytest.ini_options]
addopts = "--cov=stocktradebot --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["stocktradebot"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
packages = ["stocktradebot"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
